haproxy-server/deploy/k8s/04-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: haproxy-server
  namespace: haproxy-demo
spec:
  selector:
    app: haproxy-server
  ports:
    - name: https
      port: 8443
      targetPort: https-sidecar
