haproxy-server/deploy/k8s/05-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: haproxy-server
  namespace: haproxy-demo
  annotations:
    nginx.ingress.kubernetes.io/backend-protocol: "HTTPS"
    nginx.ingress.kubernetes.io/ssl-passthrough: "true"
spec:
  ingressClassName: nginx
  rules:
    - host: haproxy-server.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: haproxy-server
                port:
                  number: 8443
